<resources>
    <string name="app_name">On The Move</string>

    <string name="msg_no_network">Please check your internet!</string>
    <string name="unautorized">Unauthorized, please login again</string>
    <string name="responseNull">Response Null</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout...</string>

    <string name="newTask">NEW TASK</string>

    <string-array name="tabText">
        <item>@string/newTask</item>
        <item>@string/myTask</item>
    </string-array>

    <string name="mytask">My TASK</string>
    <string name="CompleteTask">Complete</string>

    <string-array name="mytasktabText">
        <item>@string/mytask</item>
        <item>@string/CompleteTask</item>
    </string-array>

    <string name="login">LOGIN</string>
    <string name="phoneNumberUserName">PHONE NUMBER/USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="ticketNo">TICKET NUMBER</string>
    <string name="comment">COMMENT</string>
    <string name="addPhoto">ADD PHOTOS</string>
    <string name="myTask">MY TASK</string>
    <string name="allTask">ALL TASK</string>
    <string name="viewImage">View Image</string>
    <string name="profile">PROFILE</string>
    <string name="mlogout">LOGOUT</string>
    <string name="detailsSuccess">Details Added Successfully</string>
    <string name="nameOfImage">NAME OF THE IMAGE</string>
    <string name="reasonofFail">Reason of Fail</string>
    <string name="reasonofFailImage">Reason of Fail Image</string>
    <string name="reasonofFailImageName">Name of Image</string>
    <string name="taskList">TASK LIST</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="viewDetail">View Detail</string>
    <string name="taskDetails">TASK DETAILS</string>
    <string name="myTaskDetails">MY TASK DETAILS</string>


    <string name="errorPhoneUserName">Enter phone number or user name</string>
    <string name="errorPassword">Enter password</string>
    <string name="errorTicketNumber">Enter ticket number</string>
    <string name="errorComment">Enter comment</string>
    <string name="errorAddress">Enter address</string>


    <string name="btnSubmit">SUBMIT</string>
    <string name="btnSave">SAVE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnOk">OK</string>


    <string name="loadingSubmitOrder">Submit order...</string>

    <string name="loadingSubmitUserDetails">Submit Details...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_drive">Start Drive</string>
    <string name="lbl_arrived">Arrived</string>
    <string name="lbl_fail">Fail</string>

    <string name="lbl_Signature">Enter Your Signature:</string>
    <string name="hint_comment">Enter Comment</string>

</resources>
