<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/linMainProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:elevation="0dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_launcher_background" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    style="@style/text18Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Name" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextLight"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linNewTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/my_profile"
                        android:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/taskList" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <LinearLayout
                    android:id="@+id/linMyTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/my_profile"
                        app:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/allTask" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <LinearLayout
                    android:id="@+id/linVehicleRefueling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/my_profile"
                        app:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="Refueling" />

                </LinearLayout>

               <!-- <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <LinearLayout
                    android:id="@+id/linVehicleHealth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/my_profile"
                        app:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="Vehicle Health" />

                </LinearLayout>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <LinearLayout
                    android:id="@+id/linTaskDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/my_profile"
                        android:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/taskDetails" />

                </LinearLayout>

                <View
                    android:id="@+id/viewTaskDetails"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/linMyTaskDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/my_profile"
                        android:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/myTaskDetails" />

                </LinearLayout>

                <View
                    android:id="@+id/viewMyTaskDetails"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"/>



                <LinearLayout
                    android:id="@+id/linLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/logout"
                        android:tint="@color/colorBlack"/>

                    <TextView
                        style="@style/text16medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/mlogout" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextLight"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Version 1.1"/>
        </RelativeLayout>


    </LinearLayout>

</layout>

